--- a/News.WeChat/static/css/page.scss
+++ b/News.WeChat/static/css/page.scss
@@ -1,7 +1,7 @@
 *{padding: 0;margin: 0;}
 .page{
 	width: 100%;
-	background-image: linear-gradient(to bottom , #e7e8e8, #fff);
+	background-image: linear-gradient(to bottom , #fff1eb, #ace0f9);
 	.body{
 		padding: 30rpx;
 	}
